Source/KNSoft.ZPigeon.Server.Native/Bridge.h



typedef
VOID
(NTAPI *ZP_NATIVE_STATUS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_DOWNLOADS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(RecordCount) PCZP_NATIVE_FILE_DOWNLOAD_RECORD Records,
    _In_ ULONG RecordCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_LIST_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(RecordCount) PCZP_NATIVE_PROCESS_RECORD Records,
    _In_ ULONG RecordCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_INFO_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_opt_ const ZP_PROCESS_INFO_VIEW* Info,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_MODULES_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_ USHORT MachineType,
    _In_ BYTE MachineBits,
    _In_reads_opt_(ModuleCount) PCZP_NATIVE_PROCESS_MODULE_RECORD Modules,
    _In_ ULONG ModuleCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_HANDLES_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(HandleCount) PCZP_NATIVE_PROCESS_HANDLE_RECORD Handles,
    _In_ ULONG HandleCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_MEMORY_ALLOCATIONS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_ ULONG SnapshotId,
    _In_reads_opt_(AllocationCount) PCZP_NATIVE_PROCESS_MEMORY_ALLOCATION Allocations,
    _In_ ULONG AllocationCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_MEMORY_REGIONS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(RegionCount) PCZP_NATIVE_PROCESS_MEMORY_REGION Regions,
    _In_ ULONG RegionCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_DUMP_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_WINDOW_LIST_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(RecordCount) PCZP_NATIVE_WINDOW_RECORD Records,
    _In_ ULONG RecordCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_WINDOW_MONITORS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(MonitorCount) PCZP_NATIVE_WINDOW_MONITOR Monitors,
    _In_ ULONG MonitorCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_WINDOW_INFO_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_opt_ const ZP_WINDOW_INFO_VIEW* Info,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_WINDOW_CAPTURE_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_bytes_opt_(ImageLength) const BYTE* Image,
    _In_ ULONG ImageLength,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_SERVICE_LIST_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(RecordCount) PCZP_NATIVE_SERVICE_RECORD Records,
    _In_ ULONG RecordCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_SERVICE_INFO_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_opt_ const ZP_SERVICE_INFO_VIEW* Info,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_StartFileDownload(
    _In_ ULONGLONG ClientId,
    _In_ ZP_FILE_DOWNLOAD_ENGINE Engine,
    _In_ BYTE Flags,
    _In_reads_(IdLength) PCWCH Id,
    _In_ ULONG IdLength,
    _In_reads_(UrlLength) PCWCH Url,
    _In_ ULONG UrlLength,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateFileDownloads(
    _In_ ULONGLONG ClientId,
    _In_ ZP_NATIVE_FILE_DOWNLOADS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_CancelFileDownload(
    _In_ ULONGLONG ClientId,
    _In_reads_(IdLength) PCWCH Id,
    _In_ ULONG IdLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_PROCESS_MEMORY_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_bytes_opt_(DataLength) const VOID* Data,
    _In_ ULONG DataLength,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_WriteFileRange(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ULONGLONG Offset,
    _In_reads_bytes_(DataLength) const VOID* Data,
    _In_ ULONG DataLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateProcesses(
    _In_ ULONGLONG ClientId,
    _In_ ZP_NATIVE_PROCESS_LIST_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryProcess(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ZP_NATIVE_PROCESS_INFO_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateProcessModules(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ZP_NATIVE_PROCESS_MODULES_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateProcessHandles(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ZP_NATIVE_PROCESS_HANDLES_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ControlProcess(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ZP_PROCESS_CONTROL Control,
    _In_ ULONG Value,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_CreateProcessDump(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ULONG DumpType,
    _In_ ZP_NATIVE_PROCESS_DUMP_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ReadProcessMemory(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ULONGLONG Address,
    _In_ ULONG Length,
    _In_ ZP_NATIVE_PROCESS_MEMORY_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_WriteProcessMemory(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ULONGLONG Address,
    _In_reads_bytes_(DataLength) const VOID* Data,
    _In_ ULONG DataLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryProcessMemoryMap(
    _In_ ULONGLONG ClientId,
    _In_ ULONG ProcessId,
    _In_ ULONGLONG CreateTime,
    _In_ ZP_NATIVE_PROCESS_MEMORY_ALLOCATIONS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryProcessMemoryRegions(
    _In_ ULONGLONG ClientId,
    _In_ ULONG SnapshotId,
    _In_ ULONG AllocationIndex,
    _In_ ZP_NATIVE_PROCESS_MEMORY_REGIONS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_CloseProcessMemoryMap(
    _In_ ULONGLONG ClientId,
    _In_ ULONG SnapshotId,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateWindows(
    _In_ ULONGLONG ClientId,
    _In_ ZP_NATIVE_WINDOW_LIST_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateMonitors(
    _In_ ULONGLONG ClientId,
    _In_ ZP_NATIVE_WINDOW_MONITORS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryWindow(
    _In_ ULONGLONG ClientId,
    _In_ ULONGLONG Handle,
    _In_ ULONG ProcessId,
    _In_ ULONG ThreadId,
    _In_ ZP_NATIVE_WINDOW_INFO_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ControlWindow(
    _In_ ULONGLONG ClientId,
    _In_ ULONGLONG Handle,
    _In_ ULONG ProcessId,
    _In_ ULONG ThreadId,
    _In_ ZP_WINDOW_CONTROL Control,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_UpdateWindow(
    _In_ ULONGLONG ClientId,
    _In_ ULONGLONG Handle,
    _In_ ULONG ProcessId,
    _In_ ULONG ThreadId,
    _In_ ULONG Fields,
    _In_reads_opt_(CaptionLength) PCWCH Caption,
    _In_ ULONG CaptionLength,
    _In_ LONG Left,
    _In_ LONG Top,
    _In_ LONG Right,
    _In_ LONG Bottom,
    _In_ ULONG Style,
    _In_ ULONG ExStyle,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_CaptureWindow(
    _In_ ULONGLONG ClientId,
    _In_ ULONGLONG Handle,
    _In_ ULONG ProcessId,
    _In_ ULONG ThreadId,
    _In_ ULONG Flags,
    _In_ ULONG MaxDimension,
    _In_ BYTE FrameRate,
    _In_ BYTE Quality,
    _In_ ULONG MonitorIndex,
    _In_ ZP_NATIVE_WINDOW_CAPTURE_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateServices(
    _In_ ULONGLONG ClientId,
    _In_ ZP_NATIVE_SERVICE_LIST_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryService(
    _In_ ULONGLONG ClientId,
    _In_reads_(ServiceNameLength) PCWCH ServiceName,
    _In_ ULONG ServiceNameLength,
    _In_ ZP_NATIVE_SERVICE_INFO_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ControlService(
    _In_ ULONGLONG ClientId,
    _In_ ZP_SERVICE_CONTROL Control,
    _In_reads_(ServiceNameLength) PCWCH ServiceName,
    _In_ ULONG ServiceNameLength,
    _In_reads_opt_(ArgumentLength) PCWCH Argument,
    _In_ ULONG ArgumentLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ConfigureService(
    _In_ ULONGLONG ClientId,
    _In_reads_(ServiceNameLength) PCWCH ServiceName,
    _In_ ULONG ServiceNameLength,
    _In_ ULONG StartType,
    _In_ BOOLEAN DelayedAutoStart,
    _In_reads_(DisplayNameLength) PCWCH DisplayName,
    _In_ ULONG DisplayNameLength,
    _In_reads_opt_(DescriptionLength) PCWCH Description,
    _In_ ULONG DescriptionLength,
    _In_reads_(BinaryPathNameLength) PCWCH BinaryPathName,
    _In_ ULONG BinaryPathNameLength,
    _In_reads_opt_(LoadOrderGroupLength) PCWCH LoadOrderGroup,
    _In_ ULONG LoadOrderGroupLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ConfigureServiceRecovery(
    _In_ ULONGLONG ClientId,
    _In_reads_(ServiceNameLength) PCWCH ServiceName,
    _In_ ULONG ServiceNameLength,
    _In_ ULONG ErrorControl,
    _In_ BOOLEAN FailureActionsOnNonCrashFailures,
    _In_ ULONG ResetPeriodSeconds,
    _In_ ULONG RestartDelayMilliseconds,
    _In_ ULONG RebootDelayMilliseconds,
    _In_ ULONG FirstFailureAction,
    _In_ ULONG SecondFailureAction,
    _In_ ULONG ThirdFailureAction,
    _In_ ULONG SubsequentFailureAction,
    _In_reads_opt_(RebootMessageLength) PCWCH RebootMessage,
    _In_ ULONG RebootMessageLength,
    _In_reads_opt_(CommandLength) PCWCH Command,
    _In_ ULONG CommandLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ConfigureServiceAccount(
    _In_ ULONGLONG ClientId,
    _In_reads_(ServiceNameLength) PCWCH ServiceName,
    _In_ ULONG ServiceNameLength,
    _In_reads_(StartNameLength) PCWCH StartName,
    _In_ ULONG StartNameLength,
    _In_reads_opt_(PasswordLength) PCWCH Password,
    _In_ ULONG PasswordLength,
    _In_ BOOLEAN PasswordPresent,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);