Source/KNSoft.ZPigeon.Server.Managed/Management.NativeMethods.cs


    [LibraryImport(Library,
        EntryPoint = "ZpNative_StartFileDownload",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int StartFileDownload(
        ulong clientId,
        FileDownloadEngine engine,
        byte flags,
        string id,
        uint idLength,
        string url,
        uint urlLength,
        string path,
        uint pathLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateFileDownloads")]
    internal static partial int EnumerateFileDownloads(
        ulong clientId,
        FileDownloadsCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_CancelFileDownload",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int CancelFileDownload(
        ulong clientId,
        string id,
        uint idLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_WriteFileRange",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int WriteFileRange(
        ulong clientId,
        string path,
        uint pathLength,
        ulong offset,
        nint data,
        uint dataLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateProcesses")]
    internal static partial int EnumerateProcesses(ulong clientId, ProcessListCallback callback, nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_QueryProcess")]
    internal static partial int QueryProcess(
        ulong clientId,
        uint processId,
        ulong createTime,
        ProcessInfoCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateProcessModules")]
    internal static partial int EnumerateProcessModules(
        ulong clientId,
        uint processId,
        ulong createTime,
        ProcessModulesCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateProcessHandles")]
    internal static partial int EnumerateProcessHandles(
        ulong clientId,
        uint processId,
        ulong createTime,
        ProcessHandlesCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_ControlProcess")]
    internal static partial int ControlProcess(
        ulong clientId,
        uint processId,
        ulong createTime,
        ProcessControl control,
        uint value,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_CreateProcessDump")]
    internal static partial int CreateProcessDump(
        ulong clientId,
        uint processId,
        ulong createTime,
        uint dumpType,
        ProcessDumpCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_ReadProcessMemory")]
    internal static partial int ReadProcessMemory(
        ulong clientId,
        uint processId,
        ulong createTime,
        ulong address,
        uint length,
        ProcessMemoryCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_WriteProcessMemory")]
    internal static partial int WriteProcessMemory(
        ulong clientId,
        uint processId,
        ulong createTime,
        ulong address,
        nint data,
        uint dataLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_QueryProcessMemoryMap")]
    internal static partial int QueryProcessMemoryMap(
        ulong clientId,
        uint processId,
        ulong createTime,
        ProcessMemoryAllocationsCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_QueryProcessMemoryRegions")]
    internal static partial int QueryProcessMemoryRegions(
        ulong clientId,
        uint snapshotId,
        uint allocationIndex,
        ProcessMemoryRegionsCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_CloseProcessMemoryMap")]
    internal static partial int CloseProcessMemoryMap(
        ulong clientId,
        uint snapshotId,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateWindows")]
    internal static partial int EnumerateWindows(ulong clientId, WindowListCallback callback, nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateMonitors")]
    internal static partial int EnumerateMonitors(ulong clientId, WindowMonitorsCallback callback, nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_QueryWindow")]
    internal static partial int QueryWindow(
        ulong clientId,
        ulong handle,
        uint processId,
        uint threadId,
        WindowInfoCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_ControlWindow")]
    internal static partial int ControlWindow(
        ulong clientId,
        ulong handle,
        uint processId,
        uint threadId,
        WindowControl control,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_UpdateWindow",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int UpdateWindow(
        ulong clientId,
        ulong handle,
        uint processId,
        uint threadId,
        WindowUpdateFields fields,
        string caption,
        uint captionLength,
        int left,
        int top,
        int right,
        int bottom,
        uint style,
        uint exStyle,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_CaptureWindow")]
    internal static partial int CaptureWindow(
        ulong clientId,
        ulong handle,
        uint processId,
        uint threadId,
        uint flags,
        uint maxDimension,
        byte frameRate,
        byte quality,
        uint monitorIndex,
        WindowCaptureCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_EnumerateServices")]
    internal static partial int EnumerateServices(ulong clientId, ServiceListCallback callback, nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_QueryService",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int QueryService(
        ulong clientId,
        string serviceName,
        uint serviceNameLength,
        ServiceInfoCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ControlService",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ControlService(
        ulong clientId,
        byte control,
        string serviceName,
        uint serviceNameLength,
        string? argument,
        uint argumentLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ConfigureService",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ConfigureService(
        ulong clientId,
        string serviceName,
        uint serviceNameLength,
        uint startType,
        [MarshalAs(UnmanagedType.U1)] bool delayedAutoStart,
        string displayName,
        uint displayNameLength,
        string description,
        uint descriptionLength,
        string binaryPathName,
        uint binaryPathNameLength,
        string loadOrderGroup,
        uint loadOrderGroupLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ConfigureServiceRecovery",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ConfigureServiceRecovery(
        ulong clientId,
        string serviceName,
        uint serviceNameLength,
        uint errorControl,
        [MarshalAs(UnmanagedType.U1)] bool failureActionsOnNonCrashFailures,
        uint resetPeriodSeconds,
        uint restartDelayMilliseconds,
        uint rebootDelayMilliseconds,
        uint firstFailureAction,
        uint secondFailureAction,
        uint thirdFailureAction,
        uint subsequentFailureAction,
        string rebootMessage,
        uint rebootMessageLength,
        string command,
        uint commandLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ConfigureServiceAccount",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ConfigureServiceAccount(
        ulong clientId,
        string serviceName,
        uint serviceNameLength,
        string startName,
        uint startNameLength,
        string? password,
        uint passwordLength,
        [MarshalAs(UnmanagedType.U1)] bool passwordPresent,
        StatusCallback callback,
        nint context);
}
